<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>FYP</groupId>
  <artifactId>Obfuscator</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <name>Obfuscator</name>
  <url>http://maven.apache.org</url>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
    

  <dependencies>
    <dependency>
      <groupId>com.github.michaelgantman</groupId>
      <artifactId>MgntUtils</artifactId>
      <version>1.5.0.8</version>
     </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>3.8.1</version>
      <scope>test</scope>
    </dependency>

    <dependency> 
      <groupId>org.antlr</groupId> 
      <artifactId>antlr4</artifactId> 
      <version>4.8</version> 
    </dependency>
  
    <dependency>
      <groupId>com.microsoft.azure</groupId>
      <artifactId>azure-batch</artifactId>
      <version>7.0.0</version>
    </dependency>

    <dependency>
      <groupId>com.github.javaparser</groupId>
      <artifactId>javaparser-symbol-solver-core</artifactId>
      <version>3.13.3</version>
    </dependency>

    
  </dependencies>
  <build>
    <resources>
      <resource>
        <directory>
          src/icons
        </directory>
      </resource>
      <resource>
        <directory>
            src/lessonImages
        </directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <configuration>
            <archive>
                <manifest>
                    <mainClass>FYP.Frame</mainClass>
                </manifest>
            </archive>
            <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
            </descriptorRefs>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
